--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Healthcare Analytics
+title: E-commerce Store Analytics
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
